gccida/c0/staticp
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/staticp/src/tree.c:2024:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v5 = lang_hooks_0.staticp( arg); 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/staticp/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/staticp/src/tree.c:2024:26: error: called object type '<dependent type>' is not a function or function pointer
v5 = lang_hooks_0.staticp( arg); 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/staticp/src/obj/tree.o] Error 1
